--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.40.2",
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.475.0",
@@ -23,6 +24,7 @@
     "@babel/parser": "^7.27.0",
     "@babel/traverse": "^7.27.0",
     "@babel/types": "^7.27.0",
+    "@rollup/rollup-darwin-arm64": "^4.40.2",
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
