อัปเดตไฟล์ package.json และ package-lock.json เพื่อเพิ่มแพ็กเกจ @types/node และ vite-plugin-static-copy รวมถึงการปรับปรุงการตั้งค่าในไฟล์ tsconfig.json และ vite.config.ts เพื่อรองรับการคัดลอกไฟล์สถิตและการจัดการ assets ในโปรเจกต์

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "plugins", "cookieconsent-config.js"]
+  "include": ["src", "plugins", "cookieconsent-config.js", "assets", "site.webmanifest"]
 }
